Fixing copy-paste error

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,8 @@ matrix:
     allow_failures:
         - rust: nightly
 
-cache:
-    directories:
-        - target
-        - merkle/target
-        - $HOME/.cargo
+cache: cargo
 
 script:
     - rustc --version && cargo --version
-    - ./ci/test_with_crates.sh
+    - cargo test --verbose --jobs=1
