The most basic use of fork, sigwait and waitpid
* Can fork a child process, wait for it to finish and clean up
* Needs to be cleaned up and made more idiomatic-Rust

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "lumbergh"
-version = "0.1.0"
+version = "0.0.1"
 authors = ["Radu Popescu <mail@radupopescu.net>"]
 
 [dependencies]
-libc = "^0.2.20"
+libc = { git = "https://github.com/radupopescu/libc.git", branch = "master" }
 errno = "^0.2.1"
