--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.0.1"
 authors = ["Radu Popescu <mail@radupopescu.net>"]
 
 [dependencies]
+error-chain = "^0.9.0"
 libc = { git = "https://github.com/radupopescu/libc.git", branch = "master" }
 errno = "^0.2.1"
