Use upstream libc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Radu Popescu <mail@radupopescu.net>"]
 
 [dependencies]
 error-chain = "^0.9.0"
-libc = { git = "https://github.com/radupopescu/libc.git", branch = "master" }
+libc = { git = "https://github.com/rust-lang/libc.git", branch = "master" }
 errno = "^0.2.1"
