Tracking lifetime of child processes in Supervisor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Radu Popescu <mail@radupopescu.net>"]
 error-chain = "^0.10.0"
 nix = "^0.7.0"
 log = "^0.3.7"
+time = "^0.1.0"
 
 [dev-dependencies]
 env_logger = "^0.4.2"
