--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ authors = ["Radu Popescu <mail@radupopescu.net>"]
 
 [dependencies]
 error-chain = "^0.10.0"
-nix = "^0.7.0"
+futures = "^0.1.0"
+futures-cpupool = "^0.1.0"
 log = "^0.3.7"
+nix = "^0.7.0"
 time = "^0.1.0"
+tokio-timer = "^0.1.0"
 
 [dev-dependencies]
 env_logger = "^0.4.2"
